--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "vuedraggable": "^2.24.3",
     "vuelidate": "^0.7.7",
     "vuelidate-error-extractor": "^2.4.1",
+    "wavesurfer.js": "^6.6.4",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   },
   "devDependencies": {
