--- a/backend/package.json
+++ b/backend/package.json
@@ -72,7 +72,7 @@
     "socket.io-redis": "^6.1.1",
     "telegraf": "danielrhodes/telegraf#feat/api-7.8",
     "uuid": "^9.0.1",
-    "whatsapp-web.js": "github:devlikeapro/whatsapp-web.js#fork-main-channels",
+    "whatsapp-web.js": "github:devlikeapro/whatsapp-web.js#fork-main-2025-06-09",
     "winston": "^3.11.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
     "yup": "^1.3.3"
