--- a/backend/package.json
+++ b/backend/package.json
@@ -70,7 +70,7 @@
     "slugify": "^1.6.6",
     "socket.io": "^3.1.2",
     "socket.io-redis": "^6.1.1",
-    "telegraf": "danielrhodes/telegraf#feat/api-7.8",
+    "telegraf": "^4.16.3",
     "uuid": "^9.0.1",
     "whatsapp-web.js": "github:devlikeapro/whatsapp-web.js#fork-main-2025-06-09",
     "winston": "^3.11.0",
